contour/manifests/echoservers-load-balancing-strategy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver-1
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver-1
    spec:
      containers:
      - name: echoserver
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20201006-42d00bd
        ports:
        - name: http-api
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-2
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver-2
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver-2
    spec:
      containers:
      - name: echoserver
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20201006-42d00bd
        ports:
        - name: http-api
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-1
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  selector:
    app.kubernetes.io/name: echoserver-1
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-2
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  selector:
    app.kubernetes.io/name: echoserver-2
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: balanced
spec:
  virtualhost:
    fqdn: balanced.127-0-0-101.nip.io
  routes:
    - services:
        - name: echoserver-1
          port: 80
        - name: echoserver-2
          port: 80
      loadBalancerPolicy:
        strategy: WeightedLeastRequest
